// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux should render corecttly! ContactDetails should work properly! 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Connect(ContactDetails) />
</ContextProvider>
`;

exports[`redux should render corecttly! ListContacts should work properly! 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Connect(Component) />
</ContextProvider>
`;

exports[`redux should render corecttly! PostContact should work properly! 1`] = `
<ContextProvider
  value={
    Object {
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Subscription {
        "handleChangeWrapper": [Function],
        "listeners": Object {
          "notify": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": null,
      },
    }
  }
>
  <Connect(Component) />
</ContextProvider>
`;

exports[`redux should render corecttly! checks for html changes in Contact 1`] = `
<li>
  <Link
    className="a"
    to="/contact/details/undefined"
  />
</li>
`;

exports[`redux should render corecttly! checks for html changes in ContactForm 1`] = `
<section
  className="mb-4"
>
  <h2
    className="h1-responsive font-weight-bold text-center my-4"
  >
    Contact us
  </h2>
  <p
    className="text-center w-responsive mx-auto mb-5"
  >
    Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within a matter of hours to help you.
  </p>
  <div
    className="row "
  >
    <div
      className="col-md-9 mb-md-0 mb-5"
    >
      <form
        id="contact-form"
        name="contact-form"
      >
        <div
          className="row"
        >
          <div
            className="col-md-6"
          >
            <div
              className="md-form mb-0"
            >
              <input
                className="form-control"
                id="name"
                name="username"
                type="text"
                value=""
              />
              <label
                className=""
                htmlFor="name"
              >
                Your Username
              </label>
            </div>
          </div>
          <div
            className="col-md-6"
          >
            <div
              className="md-form mb-0"
            >
              <input
                className="form-control"
                id="email"
                name="receiver"
                type="text"
                value=""
              />
              <label
                className=""
                htmlFor="email"
              >
                Sent to
              </label>
            </div>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-12"
          >
            <div
              className="md-form mb-0"
            >
              <input
                className="form-control"
                id="subject"
                name="subject"
                type="text"
              />
              <label
                className=""
                htmlFor="subject"
              >
                Subject
              </label>
            </div>
          </div>
        </div>
        <div
          className="row"
        >
          <div
            className="col-md-12"
          >
            <div
              className="md-form"
            >
              <textarea
                className="form-control md-textarea"
                id="message"
                name="message"
                rows="2"
                type="text"
              />
              <label
                htmlFor="message"
              >
                Your message
              </label>
            </div>
          </div>
        </div>
        <input
          type="submit"
          value="Send"
        />
      </form>
      <div
        className="status"
      />
    </div>
    <div
      className="col-md-3 text-center bor"
    >
      <ul
        className="list-unstyled mb-0"
      >
        <li>
          <i
            className="fas fa-map-marker-alt fa-2x"
          />
          <p>
            San Francisco, CA 94126, USA
          </p>
        </li>
        <li>
          <i
            className="fas fa-phone mt-4 fa-2x"
          />
          <p>
            ☎ + 01 234 567 89
          </p>
        </li>
        <li>
          <i
            className="fas fa-envelope mt-4 fa-2x"
          />
          <p>
            ✉ contact@mdbootstrap.com
          </p>
        </li>
      </ul>
    </div>
  </div>
</section>
`;
